--- a/src/main/angular/src/app/app.component.html
+++ b/src/main/angular/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-login></app-login>
+
 <app-visite-form></app-visite-form>
+<app-add-animal></app-add-animal>
+<app-login></app-login>
+<app-add-employe></app-add-employe>
