--- a/src/main/angular/src/app/animal/add-animal/add-animal.component.html
+++ b/src/main/angular/src/app/animal/add-animal/add-animal.component.html
@@ -1,14 +1,15 @@
 
 <div align="center">
         <h2>Form add animal</h2>
+    <form [formGroup]="addForm" (ngSubmit)="onFormSubmit()">
     <mat-form-field style="width:300px" appearance="fill">
       <mat-label>Nom</mat-label>
-      <input matInput>
+      <input matInput formControlName="nom">
     </mat-form-field>
     <br>
     <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Sexe</mat-label>
-            <mat-select>
+            <mat-select formControlName="sexe">
               <mat-option value="option">Male</mat-option>
               <mat-option value="option">Femelle</mat-option>
             </mat-select>
@@ -16,25 +17,46 @@
     <br>
     <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Signe distinctif</mat-label>
-            <input matInput>
+            <input matInput formControlName="signeDistinctif">
     </mat-form-field>
     <br>
     <mat-form-field style="width:300px" appearance="fill">
         <mat-label>Date d'arrivee</mat-label>
-        <input matInput [matDatepicker]="dateArrivee">
+        <input matInput [matDatepicker]="dateArrivee" formControlName="dateArrivee">
         <mat-datepicker-toggle matSuffix [for]="dateArrivee"></mat-datepicker-toggle>
         <mat-datepicker #dateArrivee></mat-datepicker>
       </mat-form-field>
     <br>
     <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Date de depart possible</mat-label>
-            <input matInput [matDatepicker]="dateDepart">
+            <input matInput [matDatepicker]="dateDepart" formControlName="dateDepartPossible">
             <mat-datepicker-toggle matSuffix [for]="dateDepart"></mat-datepicker-toggle>
             <mat-datepicker #dateDepart></mat-datepicker>
           </mat-form-field>
         <br>
 
     <br>
-    <button mat-stroked-button>Ajouter</button>
+    <mat-form-field appearance="fill" >
+      <mat-label>Espece</mat-label>
+      <mat-select name="idEspece" formControlName="idEspece">
+        <mat-option value="1">Espece1</mat-option>
+        <mat-option value="2">Espece2</mat-option>
+        <mat-option value="3">Espece3</mat-option>
+      </mat-select>
+    </mat-form-field>
+  <br>
 
+
+    <mat-form-field appearance="fill" >
+        <mat-label>Bassin</mat-label>
+        <mat-select name="idBassin" formControlName="idBassin">
+          <mat-option value="1">Bassin1</mat-option>
+          <mat-option value="2">Bassin2</mat-option>
+          <mat-option value="3">Bassin3</mat-option>
+        </mat-select>
+      </mat-form-field>
+    <br>
+    <button mat-stroked-button>Ajouter</button>
+  </form>
   </div>
+
