test ajout secteur

--- a/src/main/angular/src/app/animal/add-animal/add-animal.component.html
+++ b/src/main/angular/src/app/animal/add-animal/add-animal.component.html
@@ -36,7 +36,7 @@
         <br>
 
     <br>
-    <mat-form-field appearance="fill" >
+    <mat-form-field style="width:300px" appearance="fill" >
       <mat-label>Espece</mat-label>
       <mat-select name="idEspece" formControlName="idEspece">
         <mat-option value="1">Espece1</mat-option>
@@ -47,7 +47,7 @@
   <br>
 
 
-    <mat-form-field appearance="fill" >
+    <mat-form-field style="width:300px" appearance="fill" >
         <mat-label>Bassin</mat-label>
         <mat-select name="idBassin" formControlName="idBassin">
           <mat-option value="1">Bassin1</mat-option>
