--- a/src/main/angular/src/app/app.component.html
+++ b/src/main/angular/src/app/app.component.html
@@ -1,5 +1,6 @@
 iugiugiugiu
 <app-visite-form></app-visite-form>
 <app-add-animal></app-add-animal>
+<app-add-secteur></app-add-secteur>
 <app-login></app-login>
 <app-add-employe></app-add-employe>
