--- a/src/main/angular/src/app/employe/add-employe/add-employe.component.html
+++ b/src/main/angular/src/app/employe/add-employe/add-employe.component.html
@@ -4,34 +4,34 @@
         <form [formGroup]="addForm" (ngSubmit)="onFormSubmit()">
           <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Nom</mat-label>
-            <input matInput>
+            <input matInput formControlName="nom">
           </mat-form-field>
           <br>
           <mat-form-field style="width:300px" appearance="fill">
               <mat-label>Prénom</mat-label>
-              <input matInput>
+              <input matInput formControlName="prenom">
           </mat-form-field>
           <br>
           <mat-form-field style="width:300px" appearance="fill">
               <mat-label>Date de naissance</mat-label>
-              <input matInput [matDatepicker]="picker">
+              <input matInput [matDatepicker]="picker" formControlName="dateDeNaissance">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
           <br>
           <mat-form-field style="width:300px" appearance="fill">
               <mat-label>Identifiant</mat-label>
-              <input matInput>
+              <input matInput formControlName="identifiant">
           </mat-form-field>
           <br>
           <mat-form-field style="width:300px" appearance="fill">
               <mat-label>Mot de passe</mat-label>
-              <input matInput>
+              <input matInput formControlName="motdepasse">
           </mat-form-field>
           <br>
           <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Role</mat-label>
-            <mat-select>
+            <mat-select formControlName="role">
               <mat-option value="option">Gestionnaire de l'aquarium</mat-option>
               <mat-option value="option">Employe</mat-option>
             </mat-select>
@@ -39,12 +39,12 @@
           <br>
           <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Adresse</mat-label>
-            <textarea matInput></textarea>
+            <textarea matInput formControlName="adresse"></textarea>
           </mat-form-field>
           <br>
           <mat-form-field style="width:300px" appearance="fill" >
               <mat-label>Numéro de sécurité sociale</mat-label>
-              <input matInput>
+              <input matInput formControlName="numSecuSociale">
           </mat-form-field>
           <br>
           <button mat-stroked-button>Ajouter</button>
