--- a/src/main/angular/src/app/menu/menu/menu.component.html
+++ b/src/main/angular/src/app/menu/menu/menu.component.html
@@ -2,13 +2,10 @@
 <h1>Aquarium</h1>
 <nav>
   <ul>
-    <li><a href="#">Animaux</a></li>
-    <li><a href="#">Employes</a></li>
+    <li><a routerLink="/addActivite" routerLinkActive="active">Ajouter Activites</a></li>
+    <li><a routerLink="/showActivite" routerLinkActive="active"> Liste Activites</a></li>
     <li><a href="#">Especes</a></li>
     <li><a href="#">Bassins</a></li>
   </ul>
 </nav>
-
-<div class="conteneur">
-  <p>Blablabla</p>
-</div>
+<router-outlet></router-outlet>
