--- a/src/main/angular/src/app/activite/add-activite/add-activite.component.html
+++ b/src/main/angular/src/app/activite/add-activite/add-activite.component.html
@@ -11,20 +11,20 @@
                 <mat-label>Jour </mat-label>
                 <input matInput [matDatepicker]="jour" formControlName="jour">
                 <mat-datepicker-toggle matSuffix [for]="jour"></mat-datepicker-toggle>
-                <mat-datepicker #dateArrivee></mat-datepicker>
+                <mat-datepicker #jour></mat-datepicker>
             </mat-form-field>
             <br>
             <mat-form-field style="width:300px" appearance="fill">
                 <mat-label>Heure de debut</mat-label>
-                <input matInput [ngxTimepicker]="endTime" [format]="24"  placeholder="{{placeholderTime}}" formControlName="heureDebut" />
+                <input matInput [ngxTimepicker]="heureDebut" [format]="24"  placeholder="{{placeholderTime}}" formControlName="heureDebut" />
             </mat-form-field>
-            <ngx-material-timepicker #endTime (timeSet)="timeChange($event)" [minutesGap]="10"></ngx-material-timepicker>
+            <ngx-material-timepicker #heureDebut (timeSet)="timeChange($event)" [minutesGap]="10"></ngx-material-timepicker>
             <br>
             <mat-form-field style="width:300px" appearance="fill">
                 <mat-label>Heure de fin</mat-label>
-                <input matInput [ngxTimepicker]="endTime" [format]="24"  placeholder="{{placeholderTime}}" formControlName="heureFin" />
+                <input matInput [ngxTimepicker]="heureFin" [format]="24"  placeholder="{{placeholderTime}}" formControlName="heureFin" />
             </mat-form-field>
-            <ngx-material-timepicker #endTime (timeSet)="timeChange($event)" [minutesGap]="10"></ngx-material-timepicker>
+            <ngx-material-timepicker #heureFin (timeSet)="timeChange($event)" [minutesGap]="10"></ngx-material-timepicker>
 
             <br>
             <mat-form-field style="width:300px" appearance="fill" >
@@ -32,6 +32,22 @@
             <mat-select name="publiqueOuPrivee" formControlName="publiqueOuPrivee">
                 <mat-option value="1">Publique</mat-option>
                 <mat-option value="2">Privee</mat-option>
+            </mat-select>
+            </mat-form-field>
+            <br>
+            <mat-form-field style="width:300px" appearance="fill" >
+            <mat-label>Bassin</mat-label>
+            <mat-select name="publiqueOuPrivee" formControlName="idBassin">
+                <mat-option value="1">1</mat-option>
+                <mat-option value="2">2</mat-option>
+            </mat-select>
+            </mat-form-field>
+            <br>
+            <mat-form-field style="width:300px" appearance="fill" >
+            <mat-label>Employe</mat-label>
+            <mat-select name="publiqueOuPrivee" formControlName="idEmploye">
+                <mat-option value="1">1</mat-option>
+                <mat-option value="2">2</mat-option>
             </mat-select>
             </mat-form-field>
 
