Page d'acceuil / Page d'erreur et menu principal

--- a/src/main/angular/src/app/menu/menu/menu.component.html
+++ b/src/main/angular/src/app/menu/menu/menu.component.html
@@ -4,8 +4,8 @@
   <ul>
     <li><a routerLink="/addActivite" routerLinkActive="active">Ajouter Activites</a></li>
     <li><a routerLink="/showActivite" routerLinkActive="active"> Liste Activites</a></li>
-    <li><a href="#">Especes</a></li>
-    <li><a href="#">Bassins</a></li>
+    <li><a >Especes</a></li>
+    <li><a >Bassins</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
