Affichage animaux fonctionne tres bien

--- a/src/main/angular/src/app/animal/add-animal/add-animal.component.html
+++ b/src/main/angular/src/app/animal/add-animal/add-animal.component.html
@@ -10,8 +10,8 @@
     <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Sexe</mat-label>
             <mat-select formControlName="sexe">
-              <mat-option value="option">Male</mat-option>
-              <mat-option value="option">Femelle</mat-option>
+              <mat-option value="Male">Male</mat-option>
+              <mat-option value="Femelle">Femelle</mat-option>
             </mat-select>
           </mat-form-field>
     <br>
