--- a/src/main/angular/src/app/menu/menu/menu.component.css
+++ b/src/main/angular/src/app/menu/menu/menu.component.css
@@ -2,27 +2,30 @@
     margin: 0px;
     padding: 0px;
     font-family: Avenir, sans-serif;
+    color:turquoise;
+  
 }
 
 nav{
     width: 100%;
     margin: 0px auto 40px auto;
     background-color: white;
-    position: sticky;
+    position: relative;
     top: 0px;
 }
 
 nav ul{
     list-style-type: none;
+
 }
 
 nav li{
     float: left;
-    width: 25%;/*100% divisé par le nombre d'éléments de menu*/
-    text-align: center;/*Centre le texte dans les éléments de menu*/
+    width: 25%;
+    text-align: center;
 }
 
-/*Evite que le menu n'ait une hauteur nulle*/
+
 nav ul::after{
     content: "";
     display: table;
@@ -30,11 +33,11 @@ nav ul::after{
 }
 
 nav a{
-    display: block; /*Toute la surface sera cliquable*/
+    display: block;
     text-decoration: none;
-    color: black;
-    border-bottom: 2px solid transparent;/*Evite le décalage des éléments sous le menu à cause de la bordure en :hover*/
-    padding: 10px 0px;/*Agrandit le menu et espace la bordure du texte*/
+    color: teal;
+    border-bottom: 2px solid transparent;
+    padding: 10px 0px;
 }
 
 nav a:hover{
@@ -45,4 +48,5 @@ nav a:hover{
 .conteneur{
   margin: 0px 20px;
   height: 1500px;
+  
 }
