--- a/src/main/angular/src/app/activite/show-activite/show-activite.component.html
+++ b/src/main/angular/src/app/activite/show-activite/show-activite.component.html
@@ -1,5 +1,5 @@
 
-<h2>Liste des activites</h2>
+<h2 align="center">Activites de l'aquarium</h2>
 <mat-table [dataSource]="activites" class="mat-elevation-z8">
       
         <ng-container matColumnDef="jour">
