--- a/src/main/angular/src/app/menu/welcome-page/welcome-page.component.html
+++ b/src/main/angular/src/app/menu/welcome-page/welcome-page.component.html
@@ -1,1 +1,5 @@
-<p>welcome-page works!</p>
+<br>
+
+ <img height="400" width="430px" src="assets/aqu2.jpg" > 
+ <img height="400px" width="400px" src="assets/aqua3.jpg" > 
+ <img height="400px" width="430px" src="assets/aqua.jpg" > 
