--- a/src/main/angular/src/app/employe/add-employe/add-employe.component.html
+++ b/src/main/angular/src/app/employe/add-employe/add-employe.component.html
@@ -1,6 +1,6 @@
 
 <div align="center">
-        <h2>Form add employe</h2>
+        <h2>Ajouter un employe</h2>
         <form [formGroup]="addForm" (ngSubmit)="onFormSubmit()">
           <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Nom</mat-label>
@@ -32,8 +32,8 @@
           <mat-form-field style="width:300px" appearance="fill">
             <mat-label>Role</mat-label>
             <mat-select formControlName="role">
-              <mat-option value="option">Gestionnaire de l'aquarium</mat-option>
-              <mat-option value="option">Employe</mat-option>
+              <mat-option value="Responsable">Responsable Bassin</mat-option>
+              <mat-option value="Employe">Employe</mat-option>
             </mat-select>
           </mat-form-field>
           <br>
